exports[`data-loader calling nextPage when already loading a page ignores the action 1`] = `
Object {
  "loadAllCompletedCalled": 1,
  "loadDataCount": 2,
  "renderActions": Object {
    "nextPage": [Function],
    "refresh": [Function],
  },
  "renderCount": 3,
  "renderProps": Object {
    "data": Object {
      "data": Object {
        "data": Array [
          "Test",
        ],
        "pageNumber": 1,
      },
      "dataFromServerSideRender": false,
      "hasData": true,
    },
    "lastAction": Object {
      "success": true,
      "type": "none",
    },
    "status": "Paging",
  },
}
`;

exports[`data-loader refresh causes page to go back to page 1 1`] = `
Object {
  "loadAllCompletedCalled": 3,
  "loadDataCount": 3,
  "renderActions": Object {
    "nextPage": [Function],
    "refresh": [Function],
  },
  "renderCount": 6,
  "renderProps": Object {
    "data": Object {
      "data": Object {
        "data": Array [
          "Test",
        ],
        "pageNumber": 1,
      },
      "dataFromServerSideRender": false,
      "hasData": true,
    },
    "lastAction": Object {
      "success": true,
      "type": "refresh",
    },
    "status": "Idle",
  },
}
`;

exports[`data-loader supports paged data 1`] = `
Object {
  "loadAllCompletedCalled": 1,
  "loadDataCount": 1,
  "renderActions": Object {
    "nextPage": [Function],
    "refresh": [Function],
  },
  "renderCount": 2,
  "renderProps": Object {
    "data": Object {
      "data": Object {
        "data": Array [
          "Test",
        ],
        "pageNumber": 1,
      },
      "dataFromServerSideRender": false,
      "hasData": true,
    },
    "lastAction": Object {
      "success": true,
      "type": "initial-fetch",
    },
    "status": "Idle",
  },
}
`;

exports[`data-loader supports paged data 2`] = `
Object {
  "loadAllCompletedCalled": 1,
  "loadDataCount": 2,
  "renderActions": Object {
    "nextPage": [Function],
    "refresh": [Function],
  },
  "renderCount": 3,
  "renderProps": Object {
    "data": Object {
      "data": Object {
        "data": Array [
          "Test",
        ],
        "pageNumber": 1,
      },
      "dataFromServerSideRender": false,
      "hasData": true,
    },
    "lastAction": Object {
      "success": true,
      "type": "none",
    },
    "status": "Paging",
  },
}
`;

exports[`data-loader supports paged data 3`] = `
Object {
  "loadAllCompletedCalled": 2,
  "loadDataCount": 2,
  "renderActions": Object {
    "nextPage": [Function],
    "refresh": [Function],
  },
  "renderCount": 4,
  "renderProps": Object {
    "data": Object {
      "data": Object {
        "data": Array [
          "Test",
          "Test2",
        ],
        "pageNumber": 2,
      },
      "dataFromServerSideRender": false,
      "hasData": true,
    },
    "lastAction": Object {
      "success": true,
      "type": "page",
    },
    "status": "Idle",
  },
}
`;
